--- a/conservation/index.html
+++ b/conservation/index.html
@@ -34,118 +34,27 @@
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Conservation</i></a></li>
       <!-- <li class="crumb btn"><a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Afr</a></li> -->
-      <!-- <li class="crumb btn"><a href="america-amerique/" title="Animat Habitat conservation. North America, Am&egrave;rique du Nord.">N&nbsp;A</a></li> -->
+      <!-- <li class="crumb btn"><a href="america-amerique/" title="Animat Habitat conservation. Turtle Island, &Icirc;le aux Tortues.">N&nbsp;A</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
 
-  <section>
+  <header>
+    <div class="quote text-center">
+      <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
+      <h3>
+        <a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique."><font class="overscore">Africa</font></a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font>
+         &middot; <a href="america-amerique/" title="Animat Habitat conservation. Turtle Island, &Icirc;le aux Tortues."><font class="overscore">North&nbsp;America</font></a><font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique&nbsp;du&nbsp;Nord</font>
+      </h3>
+    </div>
+
+  </header>
+
+  <section class="single">
     <article>
-
-      <div>
-        <h4 class="letterhead title thin">Earth<font class="fr">&nbsp;&#92;&nbsp;Terre</font></h4>
-        <h2>Conservation Research<font class="fr">&nbsp;&#92;&nbsp;Recherche en Conservation</font></h2>
-        <p><i>Conservation is mainly about people, and getting people to work together: first, to identify and to survey the critical habitats upon which endangered species depend so they may be conserved. Here is a selection of international wildlife conservation policies and societies and so on.</i><font class="fr">&nbsp;&#92;&nbsp;<i>La conservation se concerne principalement les peuples et s’agit d’amener les citoyens du monde &agrave; travailler ensemble&nbsp;: d’abord, identifier et surveyer les habitats critiques dont d&eacute;pendent les esp&egrave;ces en p&eacute;ril pour pouvoir les conserver. Voici une s&eacute;lection de politiques et de soci&eacute;t&eacute;s internationales de conservation de la nature.</i></font></p>
-
-      </div>
-
-      <div class="gutter-tobo">
-        <div class="clear diptych">
-
-          <div>
-            <h5><font class="overscore">Policies</font><font class="fr">&nbsp;&#92;&nbsp;Politiques</font></h5>
-            <ul>
-              <li><a href="../url/-int/cbd/" title="CBD" target="_blank" rel="noopener">Convention on Biological Diversity</a></li>
-              <li><a href="../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Convention on International Trade in Endangered Species</a></li>
-              <li><a href="../url/-org/whc-unesco/" title="UNESCO, 1972" target="_blank" rel="noopener">Convention on Protection of the World Cultural and Natural Heritage</a></li>
-              <li><a href="../url/-org/rsis-ramsar/" title="Ramsar, 1971" target="_blank" rel="noopener">Convention on Wetlands</a></li>
-            </ul>
-          </div>
-
-          <div>
-            <h5><font class="overscore">Societies</font><font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;s</font></h5>
-            <ul>
-              <li><a href="../url/-org/iucn/" title="IUCN" target="_blank" rel="noopener">International Union for Conservation of Nature</a></li>
-              <li><a href="../url/-org/wcs/" title="WCS" target="_blank" rel="noopener">Wildlife Conservation Society</a></li>
-              <li><a href="../url/-org/wildlife/" title="The Wildlife Society" target="_blank" rel="noopener">The Wildlife Society</a></li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-
-      <div>
-        <p>The following is a selection of international wildlife conservation foundations and funds and so on.<font class="fr">&nbsp;&#92;&nbsp;Ce qui suit est une s&eacute;lection de fondations et de fonds internationaux pour la conservation de la nature.</font></p>
-      </div>
-
-      <div class="gutter-tobo">
-        <div class="clear diptych">
-          <div>
-            <h5><font class="overscore">Conservation on Planet Earth</font><font class="fr">&nbsp;&#92;&nbsp;sur la plan&egrave;te Terre</font></h5>
-            <ul>
-              <li><a href="../url/-org/bornfree/" title="Born Free" target="_blank" rel="noopener">Born Free Foundation</a></li>
-              <li><a href="../url/-org/conservation/" title="Conservation International" target="_blank" rel="noopener">Conservation International</a></li>
-              <li><a href="../url/-org/fauna-flora/" title="Fauna and Flora International" target="_blank" rel="noopener">Fauna and Flora International</a></li>
-              <li><a href="../url/-org/ifaw/" title="IFAW" target="_blank" rel="noopener">International Fund for Animal Welfare</a></li>
-              <li><a href="../url/-org/nature/" title="The Nature Conservancy" target="_blank" rel="noopener">The Nature Conservancy</a></li>
-              <li><a href="../url/-org/wildnet/" title="WCN" target="_blank" rel="noopener">Wildlife Conservation Network</a></li>
-              <li><a href="../url/-org/wild/" title="WILD" target="_blank" rel="noopener">The Wild Foundation</a></li>
-              <li><a href="../url/-org/worldwildlife/" title="WWF" target="_blank" rel="noopener">World Wide Fund for Nature</a></li>
-
-            </ul>
-          </div>
-
-          <div>
-
-            <h5><font class="overscore">Conservation in Africa</font><font class="fr">&nbsp;&#92;&nbsp;en Afrique</font></h5>
-            <ul>
-              <li><a href="../url/-org/awf/" title="AWF" target="_blank" rel="noopener">African Wildlife Foundation</a></li>
-              <li><a href="../url/-org/elephantconservation/" title="IEF" target="_blank" rel="noopener">International Elephant Foundation</a></li>
-              <li><a href="../url/-org/savetheelephants/" title="STE" target="_blank" rel="noopener">Save the Elephants</a></li>
-              <li><a href="../url/-org/spaceforgiants/" title="Space for Giants" target="_blank" rel="noopener">Space for Giants</a></li>
-
-            </ul>
-
-            <p class="linebreak">More about conservation in <a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Africa</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation en Afrique.</font></p>
-
-            <!-- <h5 class="linebreak"><font class="overscore">Conservation in North America</font><font class="fr">&nbsp;&#92;&nbsp;en Am&eacute;rique du Nord </font>:</h5>
-
-            <p class="linebreak">More about wildlife conservation in <a href="north-america/" title="Wildlife Conservation in Canada, Mexico and the United States">North America</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation de la nature en Am&eacute;rique du Nord.</font></p> -->
-
-          </div>
-
-        </div>
-      </div>
 
     </article><br class="clear">
   </section>
-
-  <div class="clear color">
-    <section class="single">
-      <div class="quote text-center">
-
-        <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">The good Earth&mdash;we could have saved it, but we were too damn cheap and lazy.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">La bonne Terre&mdash;nous aurions pu la sauver, mais nous &eacute;tions sacr&eacute;ment ignoble et fain&eacute;ant.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Kurt Vonnegut, <i>A Man Without a Country</i> (2005)</font><h4> -->
-
-        <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">The real problems of our planet are not economic or technical, they are philosophical. The philosophy of unbridled materialism is now being challenged by events. These events speak to us in a language of breakdown, unemployment, pollution and exhaustion.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">Les vrais probl&egrave;mes de notre plan&egrave;te ne sont ni &eacute;conomiques ni techniques, mais plut&ocirc;t philosophiques. La philosophie du mat&eacute;rialisme d&eacute;brid&eacute; est maintenant remise en question par les &eacute;v&eacute;nements. Ces &eacute;v&eacute;nements nous parlent dans une langue de panne, de ch&ocirc;mage, de pollution et d'&eacute;puisement.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;E. F. Schumacher, <i>Small is Beautiful</i> (2010)</font></h4> -->
-
-        <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">Conservation is a state of harmony with a friend. You cannot cherrish his right hand and chop off his left.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Aldo Leopold</font><h4> -->
-
-        <!-- <h4><font class="color text-quote">&ldquo;</font><font class="thin">There is no fundamental difference between [humans] and animals in their ability to feel pleasure and pain, happiness and misery.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Il n'y a pas de diff&eacute;rence fondamentale entre les humains et les animaux dans leur capacit&eacute; à ressentir du plaisir et de la douleur, du bonheur et de la misère.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Charles Darwin</font></h4> -->
-
-        <h4><font class="text-quote">&ldquo;</font><font class="thin">If you cannot sleep, count sheep&hellip;<br> Do not count endangered animals. You will run out.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Mitch Hedberg</font><h4>
-
-      </div>
-    </section>
-  </div>
-
-  <footer class="single">
-    <div class="quote">
-      <p class="small">This list was updated September 2020.<font class="fr">&nbsp;&#92;&nbsp;Cette liste a &eacute;t&eacute; mise &agrave; jour en septembre 2020.</font></p>
-      <p class="linebreak small">Provide details about your wildlife conservation effort on the ground to the press secretary at Animat Habitat [<a href="mailto:press@animathabitat.org" title="Address of the press secretary at Animat Habitat." target="_blank">press&nbsp;&ndash;&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Fournir des d&eacute;tails sur un autre effort de conservation de la nature &agrave; notre attach&eacute; de presse.</font></p>
-
-    </div>
-
-  </footer>
 
 </body>
 
