--- a/canon/index.html
+++ b/canon/index.html
@@ -135,6 +135,8 @@
           <li>Animat Habitat &ndash; <a class="overscore" onclick="to();" title="">Press Kit</a><font class="fr">&nbsp;&#92;&nbsp;Dossier de presse</font></li>
         </ul>
 
+        <p class="linebreak small">Address any question about our corporate canon to the press secretary at Animat Habitat [<a href="mailto:press@animathabitat.org" title="Address of the press secretary at Animat Habitat." target="_blank">press&nbsp;:&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Veuillez adresser toute question concernant notre canon corporatif &agrave; l'attach&eacute; de presse chez Animat Habitat.</font></p>
+
       </div>
 
     </article><br class="clear">
