--- a/conservation/index.html
+++ b/conservation/index.html
@@ -43,9 +43,13 @@
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
-        <a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique."><font class="overscore">Africa</font></a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font>
-         &middot; <a href="america-amerique/" title="Animat Habitat conservation. Turtle Island, &Icirc;le aux Tortues."><font class="overscore">North&nbsp;America</font></a><font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique&nbsp;du&nbsp;Nord</font>
+
+        <a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique."><font class="overscore">Africa</font></a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font> &middot;
+
+        <a href="america-amerique/" title="Animat Habitat conservation. Turtle Island, &Icirc;le aux Tortues."><font class="overscore">North&nbsp;America</font></a><font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique&nbsp;du&nbsp;Nord</font>
+
       </h3>
+
     </div>
 
   </header>
@@ -53,8 +57,52 @@
   <section class="single">
     <article>
 
+      <div class="text-center">
+
+        <h5 class="small letterhead">&plus; International Activism<font class="fr">&nbsp;&#92;&nbsp;Activisme international</font></h5>
+
+        <h5 class="title">
+
+          <a href="../url/-org/friends-of-the-earth/" title="Friends of the Earth International (FOEI)" target="_blank">Friends&nbsp;of&nbsp;the&nbsp;Earth&nbsp;International</a> &nbsp;&middot;&nbsp;
+
+          <a href="../url/-org/greenpeace/" title="Greenpeace" target="_blank">Greenpeace</a> &nbsp;&middot;&nbsp;
+
+          <a href="../url/-org/seashepherd/" title="Sea Shepherd Conservation Society (Sea Shepherd)" target="_blank">Sea&nbsp;Shepherd&nbsp;Conservation&nbsp;Society</a>
+
+        </h5>
+
+        <h5 class="small linebreak">&plus; International Conventions<font class="fr">&nbsp;&#92;&nbsp;internationaux</font></h5>
+
+        <h5 class="title">
+
+          <a href="../url/-int/cbd/" title="Convention on Biological Diversity (CBD)" target="_blank">Biological&nbsp;Diversity</a> &nbsp;&middot;&nbsp;
+
+          <a href="../url/-org/cites/" title="Convention on International Trade in Endangered Species (CITES)" target="_blank">International&nbsp;Trade&nbsp;in&nbsp;Endangered&nbsp;Species</a> &nbsp;&middot;&nbsp;
+
+          <a href="../url/-org/whc-unesco/" title="Convention on Protection of the World Cultural and Natural Heritage (UNESCO, 1972)" target="_blank">Protection&nbsp;of&nbsp;the&nbsp;World&nbsp;Cultural&nbsp;and&nbsp;Natural&nbsp;Heritage</a> &nbsp;&middot;&nbsp;
+
+          <a href="../url/-org/rsis-ramsar/" title="Convention on Wetlands (Ramsar, 1971)" target="_blank">Wetlands</a>
+
+        </h5>
+
+        <h5 class="small linebreak">&plus; International Union<font class="fr">&nbsp;&#92;&nbsp;internationale</font></h5>
+
+        <h5 class="title">
+
+          <a href="../url/-org/iucn/" title="International Union for Conservation of Nature (IUCN)" target="_blank">International&nbsp;Union&nbsp;for&nbsp;Conservation&nbsp;of&nbsp;Nature</a>
+
+        </h5>
+
+      </div>
+
     </article><br class="clear">
   </section>
+
+  <footer>
+    <div class="quote">
+
+    </div>
+  </footer>
 
 </body>
 
