--- a/index/index.html
+++ b/index/index.html
@@ -83,8 +83,9 @@
         <p>Animat Habitat Boutique &ndash; <a href="../c/terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;Conditions d'achat</font></p>
 
         <h5 class="letterhead title">&plus; Address<font class="fr">&nbsp;&#92;&nbsp;Addresse</font></h5>
-        <p>Animat Habitat &ndash; Feedback<font class="fr">&nbsp;&#92;&nbsp;Commentaires</font> [<a href="mailto:feedback@animathabitat.org" title="Address feedback for Animat Habitat." target="_blank" rel="noopener">feedback&nbsp;:&nbsp;animathabitat.org</a>]</p>
-        <p>Animat Habitat &ndash; Secretariat<font class="fr">&nbsp;&#92;&nbsp;Secr&eacute;tariat</font> [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a>]</p>
+        <p>Animat Habitat Development Office &ndash; Feedback<font class="fr">&nbsp;&#92;&nbsp;Bureau de d&eacute;veloppement &ndash; Commentaires</font> [<a href="mailto:feedback@animathabitat.org" title="Address feedback for Animat Habitat." target="_blank" rel="noopener">feedback&nbsp;:&nbsp;animathabitat.org</a>]</p>
+        <p>Animat Habitat Press Secretary<font class="fr">&nbsp;&#92;&nbsp;Attach&eacute; de presse</font> [<a href="mailto:press@animathabitat.org" title="Address of the press secretary Animat Habitat." target="_blank" rel="noopener">press&nbsp;:&nbsp;animathabitat.org</a>]</p>
+        <p>Animat Habitat Secretariat<font class="fr">&nbsp;&#92;&nbsp;Secr&eacute;tariat</font> [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a>]</p>
 
       </div>
 
