--- a/conservation/index.html
+++ b/conservation/index.html
@@ -34,7 +34,7 @@
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Conservation</i></a></li>
       <!-- <li class="crumb btn"><a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Afr</a></li> -->
-      <!-- <li class="crumb btn"><a href="america-amerique/" title="Animat Habitat conservation. Turtle Island, L'&Icirc;le Tortue.">N&nbsp;A</a></li> -->
+      <!-- <li class="crumb btn"><a href="america-amerique/north-nord/" title="Animat Habitat conservation. Turtle Island, L'&Icirc;le Tortue.">N&nbsp;A</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
