--- a/conservation/africa-afrique/index.html
+++ b/conservation/africa-afrique/index.html
@@ -35,8 +35,8 @@
     <article>
 
       <div>
-        <h4 class="letterhead title thin">Habitat Conservation</h4>
-        <h2>Africa<font class="fr">&nbsp;&#92;&nbsp;Afrique</font><font class="fr">&nbsp;&#92;&nbsp;Crois&eacute;e</font></h2>
+        <h4 class="letterhead title thin">Habitat Conservation<font class="fr">&nbsp;&#92;&nbsp;de la nature</font></h4>
+        <h2>Africa<font class="fr">&nbsp;&#92;&nbsp;Afrique</font></h2>
         <p><i>Africa is at a crossroads, on the brink of possibilities. Therein &ndash; in the nature conservancies, in the national parks, and in the corridors in-between &ndash; is hope for African wildlife. There is still time to make a difference. Animat Habitat has recognized select wildlife conservation foundations and funds making a difference in Africa.</i><font class="fr">&nbsp;&#92;&nbsp;<i>L'Afrique est &agrave; la crois&eacute;e des chemins, au bord des possibilit&eacute;s. L&agrave; &ndash; dans les r&eacute;serves naturelles, dans les parcs nationaux et dans les couloirs interm&eacute;diaires &ndash; il y a de l'espoir pour la faune africaine. C'est encore possible de faire une diff&eacute;rence. Animat Habitat a reconnu les fondations et les fiducies de conservation de la nature qui font une diff&eacute;rence en Afrique.</i></font></p>
 
       </div>
