--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -303,7 +303,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2022 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">This article was edited March 2025.</p>
+
+      <p class="linebreak small">Copyright &copy; 2023-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
