--- a/scene/two/the-beginning-of-exhibiting/index.html
+++ b/scene/two/the-beginning-of-exhibiting/index.html
@@ -37,7 +37,7 @@
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">March 2023</h4>
+        <h4 class="letterhead thin">March 2024</h4>
         <h2 class="color">Exhibition of Art</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
@@ -61,7 +61,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">This article was edited March 2025.</p>
+
+      <p class="linebreak small">Copyright &copy; 2024-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
