--- a/conservation/index.html
+++ b/conservation/index.html
@@ -63,11 +63,13 @@
 
         <h5 class="title">
 
-          <a href="../url/-org/friends-of-the-earth/" title="Friends of the Earth International (FOEI)" target="_blank">Friends&nbsp;of&nbsp;the&nbsp;Earth&nbsp;International</a> &nbsp;&middot;&nbsp;
+          <a href="../url/-org/friends-of-the-earth-international/" title="Friends of the Earth International (FOEI)" target="_blank">Friends&nbsp;of&nbsp;the&nbsp;Earth&nbsp;International</a> &nbsp;&middot;&nbsp;
 
-          <a href="../url/-org/greenpeace/" title="Greenpeace" target="_blank">Greenpeace</a> &nbsp;&middot;&nbsp;
+          <a href="../url/-org/greenpeace-international/" title="Greenpeace" target="_blank">Greenpeace International</a> &nbsp;&middot;&nbsp;
 
-          <a href="../url/-org/seashepherd/" title="Sea Shepherd Conservation Society (Sea Shepherd)" target="_blank">Sea&nbsp;Shepherd&nbsp;Conservation&nbsp;Society</a>
+          <a href="../url/-org/seashepherd/" title="Sea Shepherd Conservation Society (Sea Shepherd)" target="_blank">Sea&nbsp;Shepherd&nbsp;Conservation&nbsp;Society</a> &nbsp;&middot;&nbsp;
+
+          <a href="../url/-earth/stopecocide/" title="Stop Ecocide International (SEI)" target="_blank">Stop&nbsp;Ecocide&nbsp;International</a>
 
         </h5>
 
@@ -75,9 +77,9 @@
 
         <h5 class="title">
 
-          <a href="../url/-int/cbd/" title="Convention on Biological Diversity (CBD)" target="_blank">Biological&nbsp;Diversity</a> &nbsp;&middot;&nbsp;
+          <a href="../url/-int/cbd/" title="Convention on Biological Diversity (CBD, 1994)" target="_blank">Biological&nbsp;Diversity</a> &nbsp;&middot;&nbsp;
 
-          <a href="../url/-org/cites/" title="Convention on International Trade in Endangered Species (CITES)" target="_blank">International&nbsp;Trade&nbsp;in&nbsp;Endangered&nbsp;Species</a> &nbsp;&middot;&nbsp;
+          <a href="../url/-org/cites/" title="Convention on International Trade in Endangered Species (CITES, 1973)" target="_blank">International&nbsp;Trade&nbsp;in&nbsp;Endangered&nbsp;Species</a> &nbsp;&middot;&nbsp;
 
           <a href="../url/-org/whc-unesco/" title="Convention on Protection of the World Cultural and Natural Heritage (UNESCO, 1972)" target="_blank">Protection&nbsp;of&nbsp;the&nbsp;World&nbsp;Cultural&nbsp;and&nbsp;Natural&nbsp;Heritage</a> &nbsp;&middot;&nbsp;
 
