--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -61,7 +61,7 @@
 
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
-          <img alt="" src="https://via.animathabitat.org/img/01/logo/swt.1977.png" />
+          <img alt="" src="https://via.animathabitat.org/img/01/logo/~/swt.1977.png" />
           <p class="text-right">Logo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
