--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://via.animathabitat.org/img/01/photo/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
+        <img alt="" src="https://via.animathabitat.org/img/01/photo/~/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
         <p class="text-right gutter-side">Elephant skeleton &copy; Museum of Natural History, Marseille [recolored]</p>
 
       </div>
