--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -83,7 +83,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://via.animathabitat.org/img/01/art/woodward.bottom-of-the-ninth.png" /></a>
+        <img alt="" src="https://via.animathabitat.org/img/01/art/~ryan-woodward/woodward.bottom-of-the-ninth.png" /></a>
         <p class="text-right gutter-side"><i>Bottom of the Ninth</i> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
       </div>
 
@@ -105,7 +105,7 @@
 
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
-            <img alt="" src="https://via.animathabitat.org/img/01/art/disney.living-desert-vanishing-prairie.jpg" />
+            <img alt="" src="https://via.animathabitat.org/img/01/art/~disney-nature/disney.living-desert-vanishing-prairie.jpg" />
             <p class="text-right"><i>The Living Desert, The Vanishing Prairie</i> (1971) &copy; Disney</p>
 
             <!-- [ca.movieposter.com/q/Living+Desert/Vanishing+Prairie_posters.html] -->
