--- a/scene/one/wildlife-documentary-big-tuskers/index.html
+++ b/scene/one/wildlife-documentary-big-tuskers/index.html
@@ -89,7 +89,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Last of the Big Tuskers title" src="https://via.animathabitat.org/img/01/title/last-of-the-big-tuskers.title.png" />
+        <img alt="Last of the Big Tuskers title" src="https://via.animathabitat.org/img/01/title/~/last-of-the-big-tuskers.title.png" />
         <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
 
       </div>
