--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -112,7 +112,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/02/color/~gamblin-artist-colors/gamblin.studionotes.min.mod10.jpg" />
-        <p class="gutter-side text-right">Classical colors, Impressionist colors, Modern colors &copy; <a href="../../../url/com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">Gamblin</a></p>
+        <p class="gutter-side text-right">Classical colors, Impressionist colors, Modern colors &copy; Gamblin [<a href="../../../url/-com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">gamblincolors.com</a>]</p>
 
       </div>
 
@@ -144,7 +144,7 @@
       </div>
 
       <div class="clear">
-        <p class="gutter-side text-right">Old Masters palette, Impressionist palette, Basic High Key palette &copy; <a href="../../../url/com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">Gamblin</a></p>
+        <p class="gutter-side text-right">Old Masters palette, Impressionist palette, Basic High Key palette &copy; <a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">Gamblin</a></p>
 
       </div>
 
@@ -155,12 +155,12 @@
 
         <p class="linebreak">The longest wavelengths in our visible spectrum of light are red, the shortest are violet, then the rest is in-between. The transition of violet to red on the color wheel is acutally a mixture of red and blue components. This mixture is a purple blend not associated with a monochromatic wavelength of light. This purple blend is an extra-spectral color associated with perception. This extra-spectral color is perceived when there is an equal concentration of long red-ish wavelengths and short blue-ish wavelengths, with an absence of the mid-range yellow-ish wavelengths.</p>
 
-        <p class="linebreak">The extra-spectral color at the midpoint of red and blue in the additive red&ndash;green&ndash;blue (RGB) color system, used to create all the colors on electronic displays, is Magenta.<sup>&nbsp;[<a class="button" onclick="fn();" title="Magenta">4</a>]</sup></p>
+        <p class="linebreak">The extra-spectral color at the midpoint of red and blue in the additive red&ndash;green&ndash;blue (RGB) color system, used to create all the colors on electronic displays, is Magenta.</p>
 
       </div>
 
       <div class="clear">
-        <img alt="" src="../../../inc/svg/02/color/~gamblin-artist-colors/blended-color-wheel.svg" />
+        <img alt="" src="../../../inc/svg/02/color/blended-color-wheel.svg" />
         <p class="gutter-side text-right">Red&ndash;blue, RGB color wheel</p>
 
       </div>
@@ -192,7 +192,7 @@
       </div>
 
       <div class="clear">
-        <p class="gutter-side text-right">Quinacridone Magenta sample, Cadmium Lemon sample, Cobalt Teal sample &copy; <a href="../../../url/com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">Gamblin</a></p>
+        <p class="gutter-side text-right">Quinacridone Magenta sample, Cadmium Lemon sample, Cobalt Teal sample &copy; Gamblin [<a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">gamblincolors.com</a>]</p>
 
       </div>
 
@@ -202,7 +202,7 @@
 
         <p class="linebreak">The studio palette with these three primary colors are complimented with a black: Burnt Umber in combination with either Ultramarine Blue or Pthalo Green, based on the painting. Ultramarine and Umber are classical colors, and these two mix to make a beautiful blue&ndash;brown black. Pthalo is a modern blue&ndash;green ink, Quinacridone is a modern violet&ndash;red dye, and the color opposites mix to make a rich red&ndash;green black. The white is mostly Titanium White, another mineral-based color. Any more earth tones and secondary colors &ndash; in addition to Burnt Umber, Ultramarine Blue, Pthalo Green &ndash; are added to ease access to select colors based on each painting.</p>
 
-        <p class="linebreak">The Cobalt Teal, Cadmium Lemon, Quinacridone Magenta and other oil colors on the studio palette are <a href="../../../url/com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">Gamblin</a> Artist Oil Colors. Gamblin &ndash; founded in 1980 by Robert Gamblin &ndash; is a relatively modern color-making company, based in Portland, Oregon, United States of America. The company shares a clear appreciation for the history of color in oil painting as well as takes a contemporary approach to color-making so as to fit the needs of the modern-day oil painter. This balance of classic colors with a modern palette in many ways reflects a conservationist as well as computer art direction at Animat Habitat.</p>
+        <p class="linebreak">The Cobalt Teal, Cadmium Lemon, Quinacridone Magenta and other oil colors on the studio palette are <a href="../../../url/-com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">Gamblin</a> Artist Oil Colors. Gamblin &ndash; founded in 1980 by Robert Gamblin &ndash; is a relatively modern color-making company, based in Portland, Oregon, United States of America. The company shares a clear appreciation for the history of color in oil painting as well as takes a contemporary approach to color-making so as to fit the needs of the modern-day oil painter. This balance of classic colors with a modern palette in many ways reflects a conservationist as well as computer art direction at Animat Habitat.</p>
 
       </div>
 
@@ -227,14 +227,13 @@
 
       <div>
 
-        <p>This piece is painted on three separate 10 by 10 inch wood panels, specifically <a href="../../../url/com/apollongotrick/" rel="noopener" target="_blank" title="Apollon Gotrick">Apollon Gotrick</a> Birch Wood Panels. Apollon &ndash; founded in the 1960s by Dimitri Apokatanidis &ndash; is an art canvas manufacturing company that began as a picture framing store, based in Montreal, Quebec, Canada. The panels are made in Canada, made of three millimetre Russian birch wood, and these three in particular have made up the canvas for a triptych, titled: &ldquo;The beginning of painting.&rdquo; This piece marks the beginning of painting at Animat Habitat in the lead up to scene two: <i>White Tiger</i>.</p>
+        <p>This piece is painted on three separate 10 by 10 inch wood panels, specifically <a href="../../../url/-com/apollongotrick/" rel="noopener" target="_blank" title="Apollon Gotrick">Apollon Gotrick</a> Birch Wood Panels. Apollon &ndash; founded in the 1960s by Dimitri Apokatanidis &ndash; is an art canvas manufacturing company that began as a picture framing store, based in Montreal, Quebec, Canada. The panels are made in Canada, made of three millimetre Russian birch wood, and these three in particular have made up the canvas for a triptych, titled: &ldquo;The beginning of painting.&rdquo; This piece marks the beginning of painting at Animat Habitat in the lead up to scene two: <i>White Tiger</i>.</p>
 
       </div>
 
       <div class="quote" id="footnotes-2">
-        <p class="small"><sup>2</sup> Gamblin. Mineral, modern colors. <a href="../../../url/com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website&nbsp;Link</a>.</p>
-        <p class="small"><sup>3</sup> Gamblin. Conservation colors. <a href="../../../url/com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website&nbsp;Link</a>.</p>
-        <p class="small"><sup>4</sup> Wikipedia: Magenta. <a href="../../../url/wiki/magenta/" rel="noopener" target="_blank" title="Wikipedia / Magenta">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>2</sup> Gamblin. Mineral, modern colors. <a href="../../../url/-com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>3</sup> Gamblin. Conservation colors. <a href="../../../url/-com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website&nbsp;Link</a>.</p>
 
       </div>
 
