--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/02/type/~/paratype.rodchenko.002.png" />
-      <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, edited and recolored]</p>
+      <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/-com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, edited and recolored]</p>
 
       <div class="clear-top">
         <h3 class="linebreak">The Rodchenko Typeface</h3>
@@ -71,7 +71,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/02/type/~/paratype.rodchenko.001.png" />
-      <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p>
+      <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/-com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p>
 
       <div>
         <p>Tagir Safayev &ndash; Russian graphic designer and type developer &ndash; worked at ParaType from 1991 until 2003. Safayev designed and developed more than one hundred fonts, of note of course the Cyrillic font ITC <i>Stenberg</i> (1997) and its initial stencil font <i>Rodchenko</i> (1996-2002). In 1995, Tagir Safayev received the Rodchenko Award of the Society of Designers of Russia for <i>Rodchenko</i> (typeface, 1996-2002). Today, Tagir Safayev is a staff designer at ParaType in Moscow.<sup>&nbsp;[<a class="button" onclick="fn();" title="Luc Devroye">4</a>]</sup></p>
@@ -81,9 +81,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> ParaType. About us. <a href="../../../url/com/paratype/" title="ParaType" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> ParaType. Fonts. ITC Stenberg. (1997) <a href="../../../url/com/paratype-itc-stenberg/" title="ParaType / Fonts / ITC Stenberg" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>3</sup> ParaType. Fonts. Rodchenko. (1996-2002) <a href="../../../url/com/paratype-rodchenko/" title="ParaType / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> ParaType. About us. <a href="../../../url/-com/paratype/" title="ParaType" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> ParaType. Fonts. ITC Stenberg. (1997) <a href="../../../url/-com/paratype-itc-stenberg/" title="ParaType / Fonts / ITC Stenberg" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> ParaType. Fonts. Rodchenko. (1996-2002) <a href="../../../url/-com/paratype-rodchenko/" title="ParaType / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>4</sup> Luc Devroye, School of Computer Science, McGill University, Montreal, Canada. Type design information page. Tagir Safayev. <a href="../../../url/www/luc-devroye-fonts-rodchenko/" title="Devroye / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
