--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -144,7 +144,7 @@
       </div>
 
       <div class="clear">
-        <p class="gutter-side text-right">Old Masters palette, Impressionist palette, Basic High Key palette &copy; <a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">Gamblin</a></p>
+        <p class="gutter-side text-right">Old Masters palette, Impressionist palette, Basic High Key palette &copy; Gamblin <a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">gamblincolors.com</a></p>
 
       </div>
 
